--- a/style.css
+++ b/style.css
@@ -1,49 +1,58 @@
 #header_container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   }
 
-h1 {
+#titulo {
   width: 1200px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background-color: rgb(74, 143, 233);
+  margin: auto;
 }
 
-div {
-    width: 1000px;
+img {
+    width: 150px;
+    height: 150px;
+    
+}
+
+#menu {
+    width: 1200px;
+    height: 100px;
+    font-size: 30px;
     margin: 20px;
-    
-  }
-
-span {
-    border: 1px solid transparent;
-    display: flex;
-    
-    
+    align-content: flex-end;    
+      }
+a{
+    text-decoration: none;
+    cursor: pointer;
 }
-
-
-
 
 #container_main {
-  display: flex;
-  justify-content: space-between;
+  display: flex; 
+  justify-content: flex-start;
   margin-top: 30px;
   margin-bottom: 30px;
 }
 
 #articles{
     border: 1px solid black;
+    height: 300px;
+    margin: 10px;
 }
 
 aside {
   width: 30%;
+  height: 300px;
   border: 1px solid black;
   margin: 10px;
-  text-decoration: none;
-  overflow: hidden;
+
 }
-li,
-a {
+
+#sidemenu {
   text-decoration: none;
   overflow: hidden;
   margin: auto;
