--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+  background-image: url(http://2.bp.blogspot.com/-6zSzvMvvPDY/UyitboZaiVI/AAAAAAAAFLE/KXWocb0YVro/s1600/fondo%25252Bminimalista%25252Bnegro,%25252Bminimalist%25252Bbackground,%25252Bfondo%25252Bsitio%25252Bweb%25252Bminimalista,%25252Bfondo%25252Bnegro%25252Bweb.jpg);
+}
+
 #header_container {
   display: flex;
   flex-direction: row;
@@ -7,9 +11,10 @@
 #titulo {
   width: 1200px;
   display: flex;
-  align-content: center;
-  background-color: rgb(74, 143, 233);
+  text-align: center;
+  background-color: transparent;
   margin: auto;
+  color: white;
 }
 
 img {
@@ -23,12 +28,13 @@ img {
     height: 100px;
     font-size: 30px;
     margin: 20px;
-    align-content: flex-end;    
-      }
+    align-content: flex-end
+}
 
 #menulink {
     text-decoration: none;
     cursor: pointer;
+    color: white;
 }
 
 #container_main {
@@ -36,22 +42,26 @@ img {
   justify-content: flex-start;
   margin-top: 30px;
   margin-bottom: 30px;
+  flex-wrap
 }
 
 #articles{
-    border: 1px solid black;
-    height: 300px;
+    border: 1px solid;
+    height: 500px;
     margin: 10px;
     font-size: 24px;
     color: white;
-    background-color: gray;
+    background-color: #2f89fc;
 }
 
 aside {
-  width: 30%;
-  height: 300px;
-  border: 1px solid black;
+  width: 300px;
+  height: 500px;
+  border: 1px solid ;
   margin: 10px;
+  color: white;
+  background-color: #2f89fc;
+  
 
 }
 
@@ -75,4 +85,6 @@ input[type="submit"]{
 
 footer {
   border: 1px solid black;
+  background-color: #2f89fc;
+  color: white;
 }
